deploy: 5dc379fefaaccfb005f0defe5bb0926e816dd309

--- a/readme.html
+++ b/readme.html
@@ -115,7 +115,7 @@ enhancing user engagement and content relevance.</p><pre><code class="makeup eli
   </a>
   Top Features and Benefits
 </h2>
-<ul><li>URL format is <a href="#routes">customizable</a> (no mandatory <em>website.com/[locale]/page</em>)</li><li>URL can <a href="#multilingual-routes">matches language of content</a>; enhancing user
+<ul><li>URL format is <a href="#routes">customizable</a> (no mandatory <em>website.com/[locale]/page</em>)</li><li>URLs can <a href="#multilingual-routes">match the language of content</a>; enhancing user
 engagement and content relevance.</li><li><a href="usage.html#helpers">Less than 10 lines</a> of code to change in existing applications.</li><li>Includes <a href="#route-helpers">helper functions</a> to generate links to other locales.</li><li>Supports <a href="#custom-assigns">custom assigns</a> per scope/locale.</li><li>No run-time performance penalty!</li></ul><p>Simple when possible, powerful where needed.</p><h2 id="usage-summary" class="section-heading">
   <a href="#usage-summary" class="hover-link"><i class="ri-link-m" aria-hidden="true"></i>
   <p class="sr-only">usage-summary</p>
